# Wine_quality

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  example_data.txt  setup.cfg  setup.py
.github/workflows/: CI.yml
Wine_quality_model/: config.yml  pipeline.py  predict.py  train_pipeline.py
Wine_quality_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Wine_quality_model/config/: core.py
Wine_quality_model/datasets/: test.csv  train.csv
Wine_quality_model/processing/: data_manager.py  features.py  validate.py
requirements/: requirements.txt  test_requirements.txt
templates/: index.html  result.html
tests/: conftest.py  test_config.py  test_features.py  test_prediction.py
